--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "3.js",
   "scripts": {
     "test": "jest",
-    "testALL": "jest --watchAll",
+    "testAll": "jest --watchAll",
     "coverage": "jest --coverage"
   },
   "author": "",
